--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
 body{
     margin:0px;
-    font-family:Arial, Helvetica, sans-serif;
-    color:#1f2937;
+    font-family:"Roboto", sans-serif;
+    color:#c5c5c5;
     font-size:18px;
+}
+
+.container{
+    max-width:1050px;
+    padding:26px;
+    margin:auto;
 }
 
 #hero, #footer{
@@ -17,15 +23,37 @@ body{
     font-weight:700;
 }
 
+nav{
+    display:flex;
+    justify-content:space-between;
+    align-items:center; 
+}
+
+nav ul{
+    display:flex;
+    gap:26px;
+    list-style-type:none;
+    margin:0;
+
+}
+
 nav a, button{
     color:#e5e7eb;
     text-decoration: none;
+}
+
+#hero .content{
+    display:flex;
+    align-items:center;
+    gap: 62px;
+    margin:125px 0px;
 }
 
 #hero h1{
     font-size:48px;
     font-weight:800;
     color:#f9faf8;
+    margin:0px;
 }
 
 h2{
@@ -54,4 +82,6 @@ button, .cta_card{
 button{
     font-size:18px;
     font-weight:600;
+    padding:10px 32px;
+    border-radius:10px;
 }
