--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
     font-size:18px;
 }
 
-.container{
+.container, .cta_card{
     max-width:1050px;
     padding:26px;
     margin:auto;
@@ -13,6 +13,13 @@ body{
 
 .info, .quote{
     color:#1f2937;
+}
+
+button{
+    font-size:18px;
+    font-weight:600;
+    padding:10px 32px;
+    border:0;
 }
 
 /* Hero section */
@@ -97,27 +104,69 @@ h2{
     margin:0;
 }
 
+/* Quote section */
+
 .quote{
     background-color:#e5e7eb;
     font-size:36px;
     font-style:italic;
     font-weight:300;
     color:#1f2937;
+    margin:0px auto;
+    padding:50px 0px;
 }
 
+.quote .container{
+    max-width:775px;
+}
+.quote p{
+    margin-bottom:0px;
+}
 .quote .attribution{
     font-weight:700;
     font-size:26px;
     font-style:normal;
+    text-align:right;
+    margin-top:0px;
 }
 
-button, .cta_card{
+/* CTA section */
+
+.cta{
+    padding:100px 0px;
+}
+
+h3{
+    font-size:24px;
+    margin-bottom:0px;
+}
+
+.cta_card{
+    display:flex;
+    justify-content:space-evenly;
+}
+
+.cta_text{
+    width:500px;
+}
+
+.cta_text p{
+    color:#e5e7eb;
+    margin-top:0px;
+}
+
+.cta button{
+    border:2px solid #f9faf8;
+    flex-grow:1;
+    align-self:center;
+    max-width:140px;
+}
+
+button, .cta .cta_card{
     background-color:#3882f6;
+    border-radius:10px;
+    color:#f9faf8;
 }
 
-button{
-    font-size:18px;
-    font-weight:600;
-    padding:10px 32px;
-    border-radius:10px;
-}
+/* CTA section */
+
